--- a/generator/services/Angular-Template-managerV10/package.json
+++ b/generator/services/Angular-Template-managerV10/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-   "mongoose": "~5.4.9",
+    "handlebars": "^4.7.6",
+    "mongoose": "~5.4.9",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
