--- a/.github/workflows/auto_deployments.yml
+++ b/.github/workflows/auto_deployments.yml
@@ -82,8 +82,7 @@ jobs:
         fi
     - name:  Status of Instance 
       run: |
-          echo ${{ steps.ec2.outputs.INSTANCE_DEV }}
-          echo ${{steps.ec2.outputs.INSTANCE_STAGE}} 
+          echo ${{steps.ec2.outputs.short_ref}} "is" ${{ steps.branch-commit.outputs.instance }}
     - uses: actions/checkout@v2
     - name: Check for changes
       id: diff
@@ -270,13 +269,7 @@ jobs:
     needs: validation
     if: needs.validation.outputs.branch == 'stage'
     runs-on: ubuntu-latest
-    steps:
-      - name: Date
-        run: echo "::set-output name=DATE_NOW::$(date +'%d/%m/%Y')"
-        id: date  
-      - name: Check the date
-        run: |
-          echo ${{ steps.date.outputs.DATE_NOW }}
+    steps: 
       - uses: actions/checkout@v2
         with: 
           path: './'
@@ -333,8 +326,6 @@ jobs:
       - run: |          
           echo "jq '.base_config[0].value="${{ steps.split1.outputs._0 }}-${{ steps.splitalpha.outputs.SPLIT_ALPHA }}"' ./generator/services/configurationmanager/src/assests/configuration.json " > ./generator/services/configurationmanager/src/assests/configuration.json
           echo "jq '.base_config[1].value="${{ steps.split.outputs._0 }}.${{ steps.split.outputs._1 }}.${{ steps.splitno.outputs.SPLIT }}"' ./generator/services/configurationmanager/src/assests/configuration.json " > ./generator/services/configurationmanager/src/assests/configuration.json 
-          echo "jq '.base_config[2].value="${{ steps.date.outputs.DATE_NOW }}"' ./generator/services/configurationmanager/src/assests/configuration.json " > ./generator/services/configurationmanager/src/assests/configuration.json
-     
       - uses: EndBug/add-and-commit@v6
         with:
           message: 'Add the version and date'
