fixed issue for generating the github actions

--- a/.env
+++ b/.env
@@ -46,5 +46,6 @@ ionicmanager=http://ionicmanager
 screengenmanager=http://screengenmanager
 inframanager=http://inframanager
 deploymenmanager="http://deploymentmanager"
-inframanager="http://localhost"
+inframanager=http://inframanager
+awsdeploymentmanager=http://awsdeploymentmanager
 
