--- a/generator/services/deployment-manager/package.json
+++ b/generator/services/deployment-manager/package.json
@@ -13,12 +13,12 @@
     "author": "Rahul Tibrewal <rahul.tiberwal@10decoders.in>",
     "license": "",
     "dependencies": {
-        "dotenv": "^8.2.0",
         "@types/express": "^4.16.1",
         "body-parser": "^1.18.3",
         "child_process": "^1.0.2",
         "class-validator": "^0.9.1",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.16.4",
         "express-winston": "^3.0.1",
         "fs-extra": "^7.0.1",
@@ -32,6 +32,7 @@
         "request-promise-native": "^1.0.5",
         "simple-git": "^1.107.0",
         "stringtemplate-js": "^0.1.1",
+        "ts-node": "^9.1.1",
         "typescript": "^3.2.4",
         "winston": "^3.2.1",
         "winston-daily-rotate-file": "^3.6.0"
