vault configuration is added

--- a/devops/docker-compose/docker-compose.yml
+++ b/devops/docker-compose/docker-compose.yml
@@ -18,6 +18,19 @@ services:
       retries: 5
       start_period: 40s
 
+  vault:
+    image: vault
+    container_name: vault
+    ports:
+      - "8200:8200"
+    environment:
+        VAULT_SERVER: "http://127.0.0.1:8200"
+        VAULT_DEV_ROOT_TOKEN_ID: vault-geppetto-2021
+    cap_add:
+      - IPC_LOCK
+
+
+
   camunda:
     image: geppettodistribution/camunda-local:Jan2021
     container_name: camunda
@@ -186,6 +199,20 @@ services:
     depends_on:
       - mongo
       - apigateway
+
+  privategithubmanager:
+    build: ../../generator/services/private-github-manager
+    image: privategithubmanager
+    container_name: privategithubmanager
+    volumes:
+      - generated-code:/geppetto/
+    ports:
+      - "5022:5022"
+    env_file: ../../.env
+    depends_on:
+      - mongo
+      - apigateway
+      - vault
 
   screengenmanager:
     build: ../../generator/services/screen-gen-manager
