handlersbar issue fixed

--- a/.env
+++ b/.env
@@ -13,6 +13,10 @@ gitUsername=
 gitPassword=
 gitEmail=
 
+PrivategitUsername=
+PrivategitPassword=
+PrivategitEmail=
+
 projectmanager=http://projectmanager
 screenmanager=http://screenmanager
 entitymanager=http://entitymanager
@@ -25,7 +29,7 @@ securitymanager=http://securitymanager
 camundasvc=http://camundasvc
 authproxy=http://authproxy
 deletemanager=http://deletemanager
-vault=http://vault
+vault=http://vault:8200
 generationmanager=http://generationmanager
 configmanager=http://configmanager
 codegenmanager=http://codegenmanager
