--- a/generator/services/Angular-Template-managerV10/package.json
+++ b/generator/services/Angular-Template-managerV10/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "async-foreach": "^0.1.3",
+    "beautify": "0.0.8",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
