--- a/application/services/flowmanager/.env
+++ b/application/services/flowmanager/.env
@@ -1,3 +1,9 @@
 mongoUrl = 'mongodb://127.0.0.1/GeppettoStage'
 
 localname=development
+
+localsystementryBaseUrl=http://localhost
+localgeneratorBaseUrl=http://localhost
+
+livesystementryBaseUrl = "http://gep-dev-system-entry.gep-dev-201902.svc.cluster.local"
+livegeneratorBaseUrl = "http://gep-dev-generator.gep-dev-201902.svc.cluster.local"
