new services clonemanager

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ menubuildermanager=http://menubuildermanager
 templatemanager=http://templatemanager
 securitymanager=http://securitymanager
 camundasvc=http://camundasvc
+clonemanager=http://clonemanager
 authproxy=http://authproxy
 deletemanager=http://deletemanager
 vault=http://vault:8200
