--- a/generator/services/Angular-Template-managerV10/Dockerfile
+++ b/generator/services/Angular-Template-managerV10/Dockerfile
@@ -2,6 +2,6 @@ FROM node:14.11.0-alpine
 COPY . /angulartemplatemanager
 WORKDIR /angulartemplatemanager
 RUN npm install
-RUN npm install -g @angular/cli
+RUN npm install -g @angular/cli@7.3.9
 RUN npm i -g ts-node
 CMD npm run dev
