--- a/docs/design/shareable-features/sample-gepFeatureConfig.json
+++ b/docs/design/shareable-features/sample-gepFeatureConfig.json
@@ -26,11 +26,15 @@
         "datastore-version": "4.1.1",
         "flows":[
             {
-                "name": "gepFileUpload"
+                "name": "gepFileUpload",
+                "api": "/eeee/xxxx/",
+                "api-method": "post"
 
             },
             {
-                "name": "gepFileDownload"
+                "name": "gepFileDownload",
+                "api": "/eeee/xxxx/",
+                "api-method": "get"
 
             }
 
@@ -41,35 +45,21 @@
       "framework-version": "12.0.0",
       "flows":[
         {
-            "name": "gepFileUpload"
+            "name": "gepFileUpload",
+            "route": "/hkkjhk/hkhkk",
+            "component-name": "upload-screen"
 
         },
         {
-            "name": "gepFileDownload"
+            "name": "gepFileDownload",
+            "route": "/hkkjhk/hkhkk",
+            "component-name": "download-screen"
+
 
         }
 
     ]
 
-    },
-    "dependencies": {
-      "@types/express": "^4.16.1",
-      "body-parser": "^1.18.3",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.16.4",
-      "express-winston": "^3.0.1",
-      "got": "^11.8.2",
-      "moment": "^2.29.1",
-      "mongoose": "^5.11.12",
-      "node-async-loop": "^1.2.2",
-      "node-fetch": "^2.6.1",
-      "nodemon": "^1.18.9",
-      "ts-node": "^9.0.0",
-      "typescript": "^3.2.4",
-      "uuid": "^3.3.2",
-      "winston": "^3.2.1",
-      "winston-daily-rotate-file": "^3.6.0"
     }
   }
   
