changed the .env for gepfilemanager

--- a/.env
+++ b/.env
@@ -39,6 +39,7 @@ githubmanager=http://githubmanager
 privategithubmanager=http://privategithubmanager
 authgenmanager=http://authgenmanager
 reactgenmanager=http://reactgenmanager
+gepfilemanager=http://gepfilemanager
 
 admingenmanager=http://admingenmanager
 ionicmanager=http://ionicmanager
