--- a/.env
+++ b/.env
@@ -48,3 +48,8 @@ inframanager=http://inframanager
 deploymenmanager=http://deploymentmanager
 inframanager=http://inframanager
 awsdeploymentmanager=http://awsdeploymentmanager
+SCM_PORT=8005
+VAULT_URL=http://vault:8200
+VAULT_TOKEN=myroot
+
+
