--- a/generator/services/seed/systemcredentialmanager/package.json
+++ b/generator/services/seed/systemcredentialmanager/package.json
@@ -14,17 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.1",
-    "ts-node": "^9.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "10.0.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "mongoose": "^5.4.9",
     "nodemon": "^1.18.9",
+    "ts-node": "^9.0.0",
     "typescript": "^3.3.1",
     "util": "^0.11.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
-    
   }
 }
