--- a/generator/services/node-gen-manager/package.json
+++ b/generator/services/node-gen-manager/package.json
@@ -16,11 +16,12 @@
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "fs-extra": "^8.1.0",
     "mkdirp": "^0.5.1",
-   "mongoose": "~5.4.9",
+    "mongoose": "~5.4.9",
     "ncp": "^2.0.0",
     "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
