--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ projectmanager=http://projectmanager
 screenmanager=http://screenmanager
 entitymanager=http://entitymanager
 featuremanager=http://featuremanager
+modifiermanager=http://modifiermanager
 flowmanager=http://flowmanager
 microflowmanager=http://microflowmanager
 menubuildermanager=http://menubuildermanager
