sef feature and microservices add

--- a/.env
+++ b/.env
@@ -34,6 +34,7 @@ mongogenmanager=http://mongogenmanager
 nodegenmanager=http://nodegenmanager
 frontgenmanager=http://frontgenmanager
 angulargenmanager=http://angulargenmanager
+seffrontendmanager=http://seffrontendmanager
 angtemplatemanager=http://angtemplatemanager
 swaggergenmanager=http://swaggergenmanager
 githubmanager=http://githubmanager
