--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -25,6 +25,9 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-material": "^1.2.3",
     "bootstrap": "^5.0.2",
+    "nanoid": "^3.1.23",
+    "nanoid-dictionary": "^4.3.0",
+    "nanoid-generate": "^1.0.0",
     "ngx-logger": "^4.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -35,6 +38,7 @@
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
+    "@types/nanoid-dictionary": "^4.2.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
