--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -10,6 +10,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-devkit/build-angular": "^12.1.3",
         "@angular/animations": "~12.1.0-",
         "@angular/cdk": "^12.1.3",
         "@angular/common": "~12.1.0-",
@@ -37,7 +38,6 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~12.1.3",
         "@angular/cli": "~12.1.3",
         "@angular/compiler-cli": "~12.1.0-",
         "@types/jasmine": "~3.8.0",
