--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -22,10 +22,15 @@
         "@angular/platform-browser": "~12.1.0-",
         "@angular/platform-browser-dynamic": "~12.1.0-",
         "@angular/router": "~12.1.0-",
+        "@ckeditor/ckeditor5-angular": "^2.0.2",
+        "@ckeditor/ckeditor5-build-classic": "^29.1.0",
         "@ngx-translate/core": "^13.0.0",
         "@ngx-translate/http-loader": "^6.0.0",
+        "ag-grid-angular": "^26.0.0",
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
+        "grapesjs": "^0.17.25",
+        "grapesjs-preset-webpage": "^0.1.11",
         "nanoid": "^3.1.23",
         "nanoid-dictionary": "^4.3.0",
         "nanoid-generate": "^1.0.0",
@@ -40,6 +45,7 @@
     "devDependencies": {
         "@angular/cli": "~12.1.3",
         "@angular/compiler-cli": "~12.1.0-",
+        "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
         "@types/jasmine": "~3.8.0",
         "@types/nanoid-dictionary": "^4.2.0",
         "@types/node": "^12.11.1",
