--- a/application/clients/desktopV2/angular.json
+++ b/application/clients/desktopV2/angular.json
@@ -37,6 +37,7 @@
                             "node_modules/bootstrap/dist/js/bootstrap.min.js",
                             "node_modules/grapesjs/dist/grapes.min.js",
                             "node_modules/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.js",
+                            "node_modules/grapesjs-plugin-ckeditor/dist/grapesjs-plugin-ckeditor.min.js",
                             "src/assets/js/customjs/unsplash.js",
                             "src/assets/js/customjs/assetIcons.js"
                         ]
