--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -30,6 +30,7 @@
         "angular-material": "^1.2.3",
         "bootstrap": "^5.0.2",
         "grapesjs": "^0.17.25",
+        "grapesjs-plugin-ckeditor": "^0.0.10",
         "grapesjs-preset-webpage": "^0.1.11",
         "nanoid": "^3.1.23",
         "nanoid-dictionary": "^4.3.0",
@@ -38,6 +39,7 @@
         "ngx-spinner": "^12.0.0",
         "ngx-toastr": "^14.1.0",
         "rxjs": "~6.6.0",
+        "sass": "^1.39.0",
         "toastr": "^2.1.4",
         "tslib": "^2.2.0",
         "zone.js": "~0.11.4"
