--- a/application/clients/desktopV2/package.json
+++ b/application/clients/desktopV2/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser": "~12.1.0-",
         "@angular/platform-browser-dynamic": "~12.1.0-",
         "@angular/router": "~12.1.0-",
+        "@auth0/angular-jwt": "^5.0.2",
         "@ckeditor/ckeditor5-angular": "^2.0.2",
         "@ckeditor/ckeditor5-build-classic": "^29.1.0",
         "@ngx-translate/core": "^13.0.0",
