--- a/application/clients/desktopV2/angular.json
+++ b/application/clients/desktopV2/angular.json
@@ -31,6 +31,8 @@
                             "node_modules/ngx-toastr/toastr.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "./node_modules/grapesjs/dist/css/grapes.min.css",
+                            "node_modules/ag-grid-community/dist/styles/ag-grid.css",
+                            "node_modules/ag-grid-community/dist/styles/ag-theme-balham.css",
                             "node_modules/grapesjs-preset-webpage/dist/grapesjs-preset-webpage.min.css"
                         ],
                         "scripts": [
