finished sprint 18 plan

--- a/docs/design/shareable-features/gepInventory/sample-gepFeatureConfig.json
+++ b/docs/design/shareable-features/gepInventory/sample-gepFeatureConfig.json
@@ -1,13 +1,13 @@
 {
-    "feature-name": "gepFileManager",
+    "feature-name": "gepInventory",
     "type": "external-QUESTION: what are other types?",
     "version": "1.0.0",
-    "description": "\"Generic file uploads/downloads/management\"",
+    "description": "\"Provides Inventory Management Functions\"",
     "author": "gepinfo.@gmail.com",
     "icon-location": "/xx/ff/ggg/file-manager.png",
     "repo":{
         "type": "github",
-        "location": "https://github.com/dan-castillo/gepFileManager.git",
+        "location": "https://github.com/dan-castillo/gepInventory.git",
         "branch" : "main"
 
     },
